Revision history for Dancer

NEXT

   [ DOCUMENTATION ]
   * GH #995: Documentation improvements. (Colin Kuskie)

   [ BUG FIXES ]
   * Serializer::Mutable now consider 'Accept' before 'Content-Type'.
    (GH#996, Bernhard Reutner-Fischer)
   * Serializer::Mutable now correctly deals with content-types
        with charsets. (GH#996, Bernhard Reutner-Fischer)


   [ MISC ]
   * Unused function 'path_no_verify' removed. (GH#998, 
        reported by mjemmeson)

1.3121 2.02.2014

    [ ENHANCEMENTS ]
    * GH #994: change heuristic so that
        'application/vnd.openxmlformats-officedocument.spreadsheetml.sheet'
        is not recognized as text. (Skeeve)
    * GH #987: get_current_session() now accepts option 'no_update'.
        (Lee Carmichael)

    [ DOCUMENTATION ]
    * GH #983: Correction of various typos. (Akash Ayare)
    * GH #981: Add synopsis to Dancer::Request::Upload. (smashz)
    * GH #985: Change mentions of 'PerlHandler' to 'PerlResponseHandler'
        (Xaerxess)

1.3120 24.12.2013

    [ ENHANCEMENTS ] 
    * GH #974: Make plugins play nicely with mro 'c3'. (Fabrice Gabolde)

    [ DOCUMENTATION ]
    * GH #972: Correction of a truckload of typos. (David Steinbrunner)
    * GH #971: Stress that the request's 'env()' method is prefered over
        accessing '%ENV' directly. (isync)
    * GH #968: Fix 'ScriptAlias' example in Deployment docs. (reported
        by tednolan)
    * GH #976: Document and trap limitation in Dancer::Test. (Tom Hukins)
    * GH #976: Improve references to related modules. (Tom Hukins)

1.3119 26.10.2013

    [ ENHANCEMENTS ]
    * GH #965: Serializer also serialize content for DELETE.
        (reported by Achim Adam)

    [ BUG FIXES ]
    * GH #959: hash randomization could cause .pl MIME to vary and test
        to fail. (Olof Johansson)
    * GH #961: fix bug in require_environment's logic. (reported by
        sapphirecat)

    [ DOCUMENTATION ]
    * GH #962: Improvements of the Dancer::Test docs. (Tom Hukins)